# hcmis-backend-demo

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  seed_test_accounts.py
app/: main.py
app/api/: deps.py
app/core/: audit.py  capabilities.py  config.py  exceptions.py  security.py  time.py
app/db/: base.py  session.py
app/models/: app_log.py  attendance.py  chat.py  department.py  leave.py  notification.py  payroll.py  performance.py  special_requests.py  training.py  user.py
app/repositories/: app_logs.py  attendance.py  chat.py  departments.py  leave.py  notifications.py  payroll.py  performance.py  reports.py  special_requests.py  users.py
app/schemas/: app_log.py  attendance.py  auth.py  chat.py  department.py  leave.py  notification.py  payroll.py  performance.py  special_requests.py  training.py  user.py
app/scripts/: bootstrap_hr_account.py  clear_db_data.py  import_performance_questionnaires.py  (+3 more)
migrations/: README.md  env.py
tests/: conftest.py  test_app_logs.py  test_attendance.py  test_auth.py  test_bridge_commands.py  test_bridge_snapshot_names.py  test_bridge_timezone.py  test_bridge_users.py  test_chat.py  test_departments.py  test_health.py  test_leave.py  test_notifications.py  test_payroll.py  test_payroll_workflow.py  test_performance.py  test_permissions.py  test_profile.py  test_profile_photo_storage.py  test_reports.py  test_routes.py  test_security.py  test_shared_resources_storage.py  test_special_requests.py  test_time.py  test_users.py
(+94 files in other folders)
