[project]
name = "hcmis-backend"
version = "0.1.0"
description = "FastAPI backend for HCMIS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "boto3>=1.40.0",
    "fastapi[standard]>=0.115.8",
    "greenlet>=3.1.1",
    "email-validator>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.7.1",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.37",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "pytest>=8.3.4",
    "httpx>=0.28.1",
    "ty>=0.0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
